--- a/.env
+++ b/.env
@@ -1,2 +1,4 @@
-REACT_APP_APPLICATION_NAME = Employee Portal
-REACT_APP_EMPLOYEE_API_URL = https://d6di1ddlsi.execute-api.ap-south-1.amazonaws.com/employees
+REACT_APP_APPLICATION_NAME=Employee Portal
+REACT_APP_EMPLOYEE_API_URL=http://localhost:5000/employees
+REACT_APP_COMPLAINTS_API_URL=http://localhost:6000/complaints
+
