--- a/.env.production
+++ b/.env.production
@@ -1,2 +1,3 @@
-REACT_APP_APPLICATION_NAME = Employee Portal
-REACT_APP_EMPLOYEE_API_URL = https://d6di1ddlsi.execute-api.ap-south-1.amazonaws.com/employees
+REACT_APP_APPLICATION_NAME=Employee Portal
+REACT_APP_EMPLOYEE_API_URL=https://d6di1ddlsi.execute-api.ap-south-1.amazonaws.com/employees
+
